add new `Gallery` component to mdx setup and use it in `2023-recap`

--- a/app/blog/posts/2023-recap.mdx
+++ b/app/blog/posts/2023-recap.mdx
@@ -63,616 +63,6 @@ I want to continue to build out tooling for the Farcaster community. A big effor
 **Build out my personal life and health regiments**
 	While I really enjoyed my time in 2023 writing a ton of code and soaking up the sun in California, there are a few things personally and health-wise I'd like to take a bit more care of so I have a more well-balanced life. Some of that includes cleaning up my diet, getting back to running/playing tennis, and having some more social events/activities I'm attending regularly. It's not as if this isn't all possible out there, it's just something I didn't prioritize as much in 2023 and am realizing this especially as I've had time to reflect on the year the past few days.
 
-<h1 className="text-lg font-medium">Best of 2023</h1>
-<div>
-<p>My favorite products, content, and writing from 2023</p>
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 items-center pt-[1.5]">
-<div class="flex flex-col">
-<a href="https://www.inkandswitch.com/embark/">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/embark-dynamic-documents-for-making-plans.png" alt="Embark: Dynamic documents for making plans" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Embark: Dynamic documents for making plans</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://cursor.sh/blog/llama-inference">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/why-gpt-3.5-is-mostly-cheaper-than-llama2.png" alt="Why GPT-3.5 is (mostly) cheaper than Llama 2" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Why GPT-3.5 is (mostly) cheaper than Llama 2</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://rauno.me/craft/interaction-design">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/invisible-details-of-interaction-design.png" alt="Invisible Details of Interaction Design" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Invisible Details of Interaction Design</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://vitalik.eth.limo/general/2023/12/28/cypherpunk.html">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/make-ethereum-cypherpunk-again.png" alt="Make Ethereum Cypherpunk Again" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Make Ethereum Cypherpunk Again</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://arxiv.org/abs/2308.03921">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/spellburst-a-node-based-interface-for-exploratory-creative-coding-with-natural-language-prompts.png" alt="Spellburst: A Node-based Interface for Exploratory Creative Coding with Natural Language Prompts" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Spellburst: A Node-based Interface for Exploratory Creative Coding with Natural Language Prompts</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://arxiv.org/abs/2308.03921">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/appagent-multimodal-agents-as-smartphone-users.png" alt="AppAgent: Multimodal Agents as Smartphone Users" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">AppAgent: Multimodal Agents as Smartphone Users</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://www.youtube.com/live/tK5xI7PiCSY?si=V6BWg22abVJrPuHy&t=1575">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/embracing-irrelevancy-for-progress.png" alt="Embracing Irrelevancy for Progress" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Embracing Irrelevancy for Progress</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://www.youtube.com/watch?v=S9by0kQ12aI">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/alex-labossiere-interview-with-keith-rabois.jpg" alt="Alex Labossiere Intervew with Keith Rabois" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Alex Labossiere Intervew with Keith Rabois</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://opensea.io/assets/zora/0x4afa7992f876225cda4d503d0d1a3125348ce35b/1">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/zora-x-warpcast.png" alt="Zora x Warpcast" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Zora x Warpcast</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://opensea.io/assets/ethereum/0xdf5b19c367b4f3369e3fce60cbbac41a2d63b937/20">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/game5-nft.png" alt="Game 5" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Game 5</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://v0.dev">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/v0-dev.png" alt="v0" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">v0</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://warpcast.com">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/warpcast-brave-pwa.png" alt="Warpcast" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Warpcast</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://neynar.com">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/neynar-website.png" alt="Neynar" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Neynar</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://interface.social">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/interface-dot-social.png" alt="Interface" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Interface</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://titles.xyz">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/titles-ai-powered-creative-tools-for-remixing-and-publishing-cryptomedia.png" alt="Titles" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Titles</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/zora-website.png" alt="Zora" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Zora</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://openai.com">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/openai-website.png" alt="ChatGPT and the gpt-4-turbo API" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">ChatGPT and the gpt-4-turbo API</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://python.langchain.com/docs/integrations/memory">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/langchain-memory.png" alt="LangChain Memory" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">LangChain Memory</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://github.com/pgvector/pgvector">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/pgvector-github.png" alt="pgvector" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">pgvector</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://www.apple.com/apple-vision-pro/">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/apple-vision-pro-website.png" alt="Apple Vision Pro" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Apple Vision Pro</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://mytab.ai/">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/tab-avi-schiffmann-website.png" alt="Tab" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Tab</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://hu.ma.ne">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/humane-ai-pin-website.png" alt="Humane AI Pin" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Humane AI Pin</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://www.privy.io/features/wallets">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/privy-embedded-wallets.png" alt="Privy Embedded Wallets" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Privy Embedded Wallets</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://onchainsummer.xyz">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/onchainsummer-website.png" alt="Base and Onchain Summer" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Base and Onchain Summer</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://perplexity.ai">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/perplexity-ai-website.png" alt="Perplexity" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Perplexity</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://llamaindex.ai">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/llamaindex-website.png" alt="LlamaIndex" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">LlamaIndex</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://chromewebstore.google.com/detail/rainbow/opfgelmcmbiajamepnmloijbpoleiama">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/rainbow-chrome-extension.png" alt="Rainbow's Chrome Extension" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Rainbow's Chrome Extension</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://iris.fun">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/iris-fun-website.png" alt="iris.fun" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">iris.fun</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://new.computer">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/dot-new-computer-website.png" alt="Dot by New Computer" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Dot by New Computer</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://family.co">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/family-wallet-website.png" alt="Family" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Family</p>
-</div>
-</a>
-</div>
-</div>
-</div>
+<Gallery id="2023-recap-best" />
 
-<h1 className="text-lg font-medium">2023 Recap</h1>
-<div>
-<p>Every project and piece of content I launched or helped work on this year</p>
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 items-center pt-[1.5]">
-<div class="flex flex-col">
-<a href="https://casterscan.com">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/casterscan-v1-website.jpg" alt="Casterscan (v1 with Yash Karthik)" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Casterscan (v1 with Yash Karthik)</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://farcasterkit.com">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/farcasterkit-v1-website.png" alt="Farcaster Kit" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Farcaster Kit</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://github.com/dylsteck/litecast">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/litecast-v1-mockups.png" alt="Litecast" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Litecast</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://purple.construction">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/purple-website-redesign-2023.png" alt="PurpleDAO Homepage" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">PurpleDAO Homepage</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://www.party.app/party/0x6eee24de6f3806b0d53fa1fe7052dd2979e123ef">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/group-purple-on-party-website.png" alt="Group Purple" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Group Purple</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://github.com/dylsteck/eth-pdf-signature">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/web3-sign-a-pdf-website.png" alt="Web3 Sign a PDF with Tayyab Hussain" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Web3 Sign a PDF with Tayyab Hussain</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://twitter.com/Dylan_Steck/status/1714785040478183888">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/cortexTimelineMockup.png" alt="Timeline(a Cortex demo)" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Timeline(a Cortex demo)</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/2022-recap">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/2022Recap.png" alt="2022 Recap" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">2022 Recap</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-jan-28-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechJan282023.png" alt="Next in Tech - Jan. 28, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Jan. 28, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/user-ai-gency">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/UserAIgency.png" alt="User AI-gency" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">User AI-gency</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-feb-4-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechFeb42023.png" alt="Next in Tech - Feb. 4, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Feb. 4, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/building-a-digital-garden">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/BuildingADigitalGarden.png" alt="Building a Digital Garden" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Building a Digital Garden</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-feb-11-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechFeb112023.png" alt="Next in Tech - Feb. 11, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Feb. 11, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/the-boom-of-farcasters-developer-community">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/TheBoomOfFarcastersDeveloperCommunity.png" alt="The Boom of Farcaster's Developer Community" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">The Boom of Farcaster's Developer Community</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-feb-18-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechFeb182023.png" alt="Next in Tech - Feb. 18, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Feb. 18, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-mar-4-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechMar42023.png" alt="Next in Tech - Mar. 4, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Mar. 4, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/internet-os">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/InternetOS.png" alt="Internet OS" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Internet OS</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/the-wallet-of-tomorrow">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/TheWalletOfTomorrow.png" alt="The Wallet of Tomorrow" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">The Wallet of Tomorrow</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-mar-20-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechMar202023.png" alt="Next in Tech - Mar. 20, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Mar. 20, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-mar-25-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechMar252023.png" alt="Next in Tech - Mar. 25, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Mar. 25, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-apr-1-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechApr12023.png" alt="Next in Tech - Apr. 1, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Apr. 1, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/product-launch-nfts">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/ProductLaunchNFTs.png" alt="Product Launch NFTs" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Product Launch NFTs</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/next-in-tech-apr-8-2023">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechApr82023.png" alt="Next in Tech - Apr. 8, 2023" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Next in Tech - Apr. 8, 2023</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/shifting-directions">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/ShiftingDirections.png" alt="Shifting Directions" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Shifting Directions</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://open.substack.com/pub/dylsteck/p/focus-on-what-doesnt-scale">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/FocusOnWhatDoesntScale.png" alt="Focus on What Doesn't Scale" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Focus on What Doesn't Scale</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/IpbvRUdLY_U?si=2YaBZ3MuHcQxgOsW">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/InternetOS.png" alt="Internet OS" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Internet OS</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/eP-R45cngoA?si=9VFXELiQCtezzE6T">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/cortex-n-and-w-update-apr-24-23-yt-thumbnail.png" alt="Cortex N&W Update - Apr. 24" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Cortex N&W Update - Apr. 24</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/GarUfO9ARf4?si=7vLZcO4Bd8rhBQKz">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/thoughts-on-llms-shaping-our-future-yt-thumbnail.jpg" alt="Thoughts on LLMs Shaping our Future" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Thoughts on LLMs Shaping our Future</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/jgixEy4X72A?si=zUf-aqqGgcniQ4tk">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/casterscan-video-update-yt-thumbnail.jpg" alt="Casterscan Video Update" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Casterscan Video Update</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/1UFqZ7nHs1I?si=-QtwDsx8yFKM_XEu">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/fip2_primer-yt-thumbnail.png" alt="FIP-2 Primer" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">FIP-2 Primer</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/OgBcDJNXMzs?si=damTfAwdGfkgfi89">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/reaction-to-balaji-cloud-cartography-moz-yt-thumbnail.jpg" alt="Reaction To Balaji's Cloud Cartography Comments on MoZ" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Reaction To Balaji's Cloud Cartography Comments on MoZ</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/e_xLZTxCLcY?si=4A4mtP4oUVrttoCq">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/ai-wearable-wars-yt-thumbnail.png" alt="AI Wearable Wars" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">AI Wearable Wars</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/0jLV0_03H68?si=nQeYnfOLgjt1qWwK">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/10-18-updates-timeline-farcasterkit-yt-thumbnail.jpg" alt="10/18 Updates: Timeline and Farcaster Kit" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">10/18 Updates: Timeline and Farcaster Kit</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/jSCAyiOHTXM?si=zr85qq_yJqrzRPxL">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/purple-season-1-in-96-seconds-yt-thumbnail.jpg" alt="Purple Season 1 in 96 Seconds" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Purple Season 1 in 96 Seconds</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/ITzUr3haE8I?si=naCal0RWIlSgfjcQ">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/introducing-farcasterkit-yt-thumbnail.png" alt="Introducing Farcaster Kit" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Introducing Farcaster Kit</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://youtu.be/9CIryp5RkPg?si=4nHaYe1WBMdzOTfR">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/openai-dev-day-recap-yt-thumbnail.jpg" alt="OpenAI Dev Day Recap" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">OpenAI Dev Day Recap</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/eth:0xc9723c1383b76e4155941db94c89fbbcbe862c05">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/ProductLaunchNFTs.png" alt="Product Launch NFTs" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Product Launch NFTs</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/eth:0x326b7a73624a08005614979c0852211c0bce15d6">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/introducing-casterscan-nft.gif" alt="Introducing Casterscan" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Introducing Casterscan</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/zora:0x1df87873824bebdd58e89e2bb3f8502491829894">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/zorb-in-the-sky-nft.png" alt="zorb in the sky" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">zorb in the sky</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/base:0xfb097e5579cca171a443935c8469ff2fa5f27c19">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/celebrate-casterscan-v2-nft.png" alt="Celebrate Casterscan v2" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Celebrate Casterscan v2</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/zora:0x4cf66994ca43a27c3b28e05032e350af59c70b50/1">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/purple-season-1-in-96-seconds-yt-thumbnail.jpg" alt="Purple Season 1 in 96 Seconds" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Purple Season 1 in 96 Seconds</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/base:0xed66a3cb41f32d9cdb56b086e51f11472ff4c8ce/1">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/purple-strategy-group-community-questions-nft.png" alt="Purple Strategy Group Community Questions" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Purple Strategy Group Community Questions</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://zora.co/collect/zora:0x2b1a039a4b74b89f95fd05403e7d1d4478bed04a">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/a-bunch-of-nerdf-kismet-casa-energy-nft.png" alt="A Bunch of NeR(d)F by Kismet Casa for ENERGY" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">A Bunch of NeR(d)F by Kismet Casa for ENERGY</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://glimpse.surf">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/glimpse-extension-banner.png" alt="Glimpse (internship)" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Glimpse (internship)</p>
-</div>
-</a>
-</div>
-<div class="flex flex-col">
-<a href="https://double-down.com/">
-<div class="w-[100%] flex flex-col items-center">
-<img src="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/double-down-vc-banner.png" alt="Double Down (fellowship)" width="450" height="350" class="w-full max-h-72 object-cover rounded-lg bg-top mt-1"/>
-<p class="text-black/80 text-center pt-2 text-md">Double Down (fellowship)</p>
-</div>
-</a>
-</div>
-</div>
-</div>
+<Gallery id="2023-recap-portfolio" />
