wip: added all content to 2024 portfolio, now need to do the best list and finish final draft

--- a/app/blog/posts/2024-recap.mdx
+++ b/app/blog/posts/2024-recap.mdx
@@ -35,3 +35,7 @@ Here are some things I hope for myself in 2025:
 **Create more media**. I really enjoy writing blog posts and making videos, especially as a way to tell a particular narrative. I spend a lot of my time listening to music and watching others to use media to tell their own story, whether it's in entertainment or a new wave of startups using media, and feel really compelled to keep this up not just as a general practice but also to tell very particular stories that I've wanted to for a while(a lot of the browser stuff comes to mind here).
 
 **Go to more live experiences**. This year in particular I missed out on a few concerts I would've loved to go to from artists I follow closely: Kendrick Lamar's Pop Out show on Juneteenth in LA, Tyler the Creator's pop-up listening party for Chromakopia this past October in Brooklyn, and Kaytranada's world tour. Missing these shows and having amazing times at other experiences(particularly FWB Fest which really opened my eyes) made me realize how much I cherish live experiences, especially when it involves music and communities that I love.
+
+<Gallery id="2024-recap-best" />
+
+<Gallery id="2024-recap-portfolio" />
